
public static class Tags
{
    public static string WALK_ANIM_PARAM = "Walk";
    
    public static string IDLE_ANIMATION = "Idle";
    public static string WALK_ANIMATION = "Walk";
    public static string PLAYER_TAG = "Player";
    public static string JUMP_ANIM_PARAM = "Grounded";
    public static string yVelocity = "ySpeed";
    public static string HAMMER_HIT = "MoveHammer";
    public static string HAMMER_HIT_WALK = "MoveHammerWalk";
    public static string HAMMER_TAG = "Hammer";
    public static string BARRIER_TAG = "Barrier";
    public static string NOTE_EXPLOSION = "Explode";
    public static string NOTE = "Note";
    public static string MAINLEVEL = "MainMenu";
    public static string PLAYLEVEL = "SampleScene";
}
